# fastapi_app_builder

./: .gitignore  .pylintrc  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  serverless.yml  setup.py
api/: __init__.py  app.py  resources.py  schemas.py  typed.py
api/aws/: storage.py
api/security/: application.py  middleware.py  network.py  transport.py
app/: package.json  unocss.config.ts  vite.config.ts
app/src/: components.d.ts
app/src/components/: FormModal.vue  Spinner.vue
app/src/layouts/: default.vue
app/src/pages/: home.vue  index.vue
app/src/store/: index.ts
client/: index.html  package.json  vite.config.ts
client/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts
client/src/components/: Auth.vue  AuthModal.vue  Chart.vue  Editor.vue  FormModal.vue  Menu.vue  Terminal.vue
client/src/layouts/: default.vue
client/src/pages/: dashboard.vue  index.vue  schema.vue  swagger.vue
fastapi_appbuilder/: __init__.py  auth.py  chart.py  main.py  resources.py  typed.py
prisma/: schema.prisma
www/: index.html
www/assets/: about-24c2380f.js  about-5e1b1f1e.js  contact-2fe36207.js  contact-6f89de2f.js  dashboard-047ddf9f.js  dashboard-4038c654.js  dashboard-77d1a5a6.js  dashboard-c079c073.js  home-1accc98e.js  home-8560bf0e.js  home-9c8d2b1b.js  home-f6489b01.js  index-3666fbae.css  index-380830bd.css  index-96385626.css  index-9e5041cc.js  index-c5db604c.js  index-d5d76a9e.css  index-d832e905.js  index-da8e4287.js  messages-3abd5b5e.js  messages-4f4840b6.js  messages-6be8fa05.js  messages-fa93b8d5.js  schema-1a558c08.js  schema-25b32c67.js  schema-a0546d19.js  schema-f162d39d.js  settings-0441dd6f.js  settings-563d0cca.js  settings-77f9067f.js  settings-94d6e6e3.js  swagger-5ed7e270.js
