[tool.poetry]
name = "fastapi_appbuilder"
version = "0.0.1"
description = ""
authors = ["Oscar Bahamonde <oscar.bahamonde@hatarini.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
python-multipart = "^0.0.5"
prisma = "^0.7.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
